--- a/public/index.html
+++ b/public/index.html
@@ -2,35 +2,37 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>パステル掲示板</title>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
+  <header>
     <h1>パステル掲示板</h1>
+  </header>
+  <main>
+    <section class="form-section">
+      <input type="text" id="title" placeholder="タイトル" />
+      <textarea id="content" placeholder="内容"></textarea>
+      <input type="file" id="image" accept="image/*" />
+      <button onclick="createThread()">スレッド作成</button>
+    </section>
 
-    <div class="form">
-      <input type="text" id="title" placeholder="タイトル"/>
-      <textarea id="content" placeholder="本文"></textarea>
-      <input type="file" id="image" accept="image/*"/>
-      <button onclick="createThread()">作成</button>
-    </div>
-
-    <div class="controls">
+    <section class="controls">
       <select id="sort" onchange="sortThreads()">
         <option value="newest">新しい順</option>
         <option value="oldest">古い順</option>
       </select>
-      <input type="text" id="search" placeholder="検索" oninput="searchThreads()"/>
-    </div>
+      <input type="text" id="search" placeholder="検索" oninput="searchThreads()" />
+    </section>
 
-    <div id="threadList"></div>
+    <section id="threadList"></section>
 
-    <h2>削除されたスレッド</h2>
-    <div id="deletedThreads"></div>
-  </div>
-
+    <section>
+      <h2>削除されたスレッド</h2>
+      <div id="deletedThreads"></div>
+    </section>
+  </main>
   <script src="script.js"></script>
 </body>
 </html>
